# pnp

./: CMakeLists.txt  README.md
EPnP/: README.md  epnp.cpp  epnp.h
include/: p3p.h
p3p/: README.md  p3p.cpp  p3p.h  p3p_demo.cpp
src/: epnp.cpp  p3p.cpp
test/: epnp_node.cpp  p3p_node.cpp
